# invoicely

./: .gitignore  README.md
api/: .coveragerc  .env-template  README.md  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  readme.md  text.txt
api/alembic/: env.py
api/alembic/versions/: 019e0bb83b4c_category_type_changed_to_string.py  1ea4c77384b3_user_id_for_tags.py  2c660e1c762b_migration_message.py  43f85345d05e_categories.py  4421e346bbea_initial_migrations.py  5bd31c977679_invoice_status_to_enum.py  6a2cd2996af2_resize_otp_to_100.py  7d4eda8e6d6a_add_name_to_invoice.py  7f83a8fd7f50_add_invoices_and_tags.py  90c8942df694_user_id_for_tags.py  a38c88504051_initial_migration.py  b89b188ea0e8_content_type_changed_to_text.py  c017128a0b33_categories_2.py  e36e4f6ffcc7_added_content_column.py  f19374d46a6e_category_type_changed_to_enum.py
api/dtos/: invoice_dtos.py  role_dtos.py  tag_dtos.py  token_dtos.py  user_dtos.py
api/enums/: category.py  importance.py  status.py
api/ml_utils/: category_detection.py
api/ml_utils/category_model_adam/: config.json  model.safetensors
api/models/: invoice.py  role.py  tag.py  user.py
api/repositories/: invoice_repository.py  role_repository.py  tag_repository.py  user_repository.py
api/routers/: auth_router.py  invoice_router.py  role_router.py  tag_router.py  user_router.py
api/services/: auth_service.py  invoice_service.py  mailer_service.py  otp_service.py  role_service.py  tag_service.py  user_service.py
api/tests/: test_auth_router.py  test_auth_service.py  test_main.py
api/tests/routers/: test_auth_router.py  test_user_router.py
api/tests/services/: test_invoice_service.py  test_otp_service.py  test_role_service.py  test_tag_service.py
client/: package.json  tailwind.config.mjs
client/src/app/: globals.css  layout.js  page.js  providers.js
client/src/app/api/: api.js  authApi.js
client/src/app/authentication/: page.js
client/src/app/components/: drawerComponent.js  header.js  home_cards.js  logo.js  notifications.js  search.js  single_home_card.js  tableContent.js
client/src/app/context/: AuthProvider.js
client/src/app/homepage/: page.js
client/src/app/newInvoice/: page.js
