[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Eduard Sabau, Clem Daria"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
starlette = "^0.41.3"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
mysqlclient = "^2.2.6"
pydantic-settings = "^2.6.1"
pymysql = "^1.1.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.19"
asyncmy = "^0.2.9"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
