[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Eduard Sabau, Clem Daria"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
starlette = "^0.41.3"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
mysqlclient = "^2.2.6"
pydantic-settings = "^2.6.1"
pymysql = "^1.1.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.19"
asyncmy = "^0.2.9"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.0"}
cryptography = "^44.0.0"
greenlet = "^3.1.1"
bcrypt = "^4.0.1"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
matplotlib = "^3.5.0"
opencv-python-headless = "^4.10.0.84"
transformers = "^4.34.0"
torch = "^2.5.0"
pandas = "^1.3.5"
evaluate = "^0.4.3"
scikit-learn = "^1.6.1"
numpy = "^1.21.4"
seaborn = "^0.13.2"
fastapi-utilities = "^0.3.0"
apscheduler = "^3.11.0"
mailtrap = "^2.0.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"
pythonpath = [
  ".", "api", "routers", "services", "repositories", "models", "dtos", "enums"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"